# Lympha

./: .gitignore  README.md  config.yaml  docker-compose.yml  lympha.conf  main.py  plan.md  pyproject.toml  requirements.txt
core/: config.py  database.py  firewall.py  orchestrator.py
logs/: normal.jsonl  requests.jsonl  test.jsonl  test2.jsonl  test3.jsonl
lympa/: __main__.py  config.py  iptables.py  orchestrator.py  traffic_capture.py
lympa/tier1/: engine.py  mamba_stream.py  train_model.py  xgboost_model.py
lympa/tier2/: codebert.py  guardrail.py  securebert.py  state_cache.py
lympa/tier3/: __init__.py
models/: securebert_worker.py
models/tier1/: xgboost_model.json
scripts/: finetune_codebert.py  finetune_codebert_colab.ipynb  finetune_codebert_colab.py
suricata/config/: suricata.yaml  suricata.yaml.template
suricata/config/rules/: local.rules
test/: attack.py  attack_brute.py  attack_cmdinj.py  attack_scan.py  attack_sqli.py  attack_xss.py  benchmark.py  feature_extractor.py  normal.py  run_test.py  send_normal.py  test_tier1.py  test_tier2.py  test_tier3.py  vuln_server.py
